--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.49.3"
+    "react-hook-form": "^7.49.3",
+    "serverless-mysql": "^1.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
